Fix line number alignment in code highlight component

--- a/gatsby-theme-hello-friend-ng/src/assets/scss/default.scss
+++ b/gatsby-theme-hello-friend-ng/src/assets/scss/default.scss
@@ -192,3 +192,7 @@ pre {
     padding: 0;
   }
 }
+
+span.react-syntax-highlighter-line-number {
+  text-align: left !important;
+}
